[gd_scene load_steps=19 format=3 uid="uid://cwfqjs15xpcmx"]

[ext_resource type="Texture2D" uid="uid://di8whvxk6qkpp" path="res://assets/tilesheet.png" id="1_tory2"]
[ext_resource type="Script" uid="uid://c1jib4fqcicgv" path="res://characters/player.gd" id="1_x0jl3"]
[ext_resource type="Resource" uid="uid://cld1js5ka5jur" path="res://characters/player_movement_speed.tres" id="2_tory2"]
[ext_resource type="Script" uid="uid://b5rpv2sfrwjo1" path="res://components/jump_component.gd" id="4_x0jl3"]
[ext_resource type="Script" uid="uid://cj0iqlwe3ob0s" path="res://components/rotate_towards_mouse_component.gd" id="5_h1q25"]
[ext_resource type="Resource" uid="uid://1pkw8g50y8v1" path="res://game_settings.tres" id="6_j31ep"]
[ext_resource type="AudioStream" uid="uid://cdclflkw6hg4q" path="res://assets/sfx/ugras.ogg" id="7_q605b"]
[ext_resource type="AudioStream" uid="uid://duymdl44r6aw1" path="res://assets/sfx/seta1.wav" id="8_eho78"]
[ext_resource type="AudioStream" uid="uid://buuvao1xb18l" path="res://assets/sfx/seta2.wav" id="9_8sqrr"]
[ext_resource type="AudioStream" uid="uid://hm7aq7hp63po" path="res://assets/sfx/suhintas.wav" id="10_6rrl0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tory2"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_evndh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHandAnchor/LeftHandWeapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftHandAnchor/LeftHandWeapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.35619]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftHandAnchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, -64)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightHandAnchor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 64)]
}

[sub_resource type="Animation" id="Animation_x0jl3"]
resource_name = "jump"
length = 0.35
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35),
"transitions": PackedFloat32Array(1, -0.5, -0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h1q25"]
resource_name = "sword_slash"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftHandAnchor/LeftHandWeapon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 2),
"update": 0,
"values": [Vector2(35, -10), Vector2(70, -10), Vector2(50, -10), Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHandAnchor/LeftHandWeapon:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5, 2),
"update": 0,
"values": [1.5708, 1.5708, 2.35619]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftHandAnchor:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Vector2(64, -48), Vector2(64, -48), Vector2(32, -64)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightHandAnchor:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Vector2(16, 48), Vector2(16, 48), Vector2(32, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1q25"]
_data = {
&"RESET": SubResource("Animation_evndh"),
&"jump": SubResource("Animation_x0jl3"),
&"sword_slash": SubResource("Animation_h1q25")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_eus45"]
playback_mode = 1
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("7_q605b")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vcag3"]
random_pitch = 1.3
random_volume_offset_db = 0.3
streams_count = 2
stream_0/stream = ExtResource("8_eho78")
stream_1/stream = ExtResource("9_8sqrr")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h076o"]
playback_mode = 1
random_pitch = 1.3
random_volume_offset_db = 0.3
streams_count = 1
stream_0/stream = ExtResource("10_6rrl0")

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_x0jl3")
move_stats = ExtResource("2_tory2")

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_tory2")
region_enabled = true
region_rect = Rect2(256, 1024, 128, 128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tory2")

[node name="LeftHandAnchor" type="Marker2D" parent="."]
position = Vector2(32, -64)

[node name="LeftHandWeapon" type="Node2D" parent="LeftHandAnchor"]
position = Vector2(10, 0)
rotation = 2.35619

[node name="SwordSprite" type="Sprite2D" parent="LeftHandAnchor/LeftHandWeapon"]
position = Vector2(12, 0)
texture = ExtResource("1_tory2")
centered = false
offset = Vector2(-64, -110)
region_enabled = true
region_rect = Rect2(256, 1152, 128, 128)

[node name="HandSprite" type="Sprite2D" parent="LeftHandAnchor"]
texture = ExtResource("1_tory2")
region_enabled = true
region_rect = Rect2(384, 1024, 128, 128)

[node name="RightHandAnchor" type="Marker2D" parent="."]
position = Vector2(32, 64)

[node name="HandSprite" type="Sprite2D" parent="RightHandAnchor"]
texture = ExtResource("1_tory2")
region_enabled = true
region_rect = Rect2(384, 1024, 128, 128)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h1q25")
}

[node name="JumpComponent" type="Node" parent="." node_paths=PackedStringArray("anim_player", "sfx")]
script = ExtResource("4_x0jl3")
anim_player = NodePath("../AnimationPlayer")
sfx = NodePath("../JumpSound")
metadata/_custom_type_script = "uid://b5rpv2sfrwjo1"

[node name="RotateTowardsMouseComponent" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("5_h1q25")
target = NodePath("..")
game_settings = ExtResource("6_j31ep")
metadata/_custom_type_script = "uid://cj0iqlwe3ob0s"

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_eus45")
bus = &"SFX"

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_vcag3")
volume_db = -5.0
bus = &"SFX"

[node name="MoveSoundTimer" type="Timer" parent="MoveSound"]
wait_time = 0.3
autostart = true

[node name="SwordSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_h076o")
bus = &"SFX"
